# try

linux算子搭建/: CMakeLists.txt  try.sh
linux算子搭建/src/: main.cpp  test.py  try_find.cpp
linux算子搭建/src/suanzi/: findHardDisk.cpp  findHardDisk.h
push_to_github/: README.md  README_CN.md  TTS.py  example.ipynb  requirements.txt  webui.py
push_to_github/ChatTTS/: core.py
push_to_github/ChatTTS/utils/: infer_utils.py
