# cmake_minimum_required(VERSION 3.5)
# project(test)
# set(OpenCV_DIR "opencv_try/opencv-4.5.5/build")
# find_package(OpenCV REQUIRED)
# include_directories(${OpenCV_INCLUDE_DIRS})
# add_executable(main src/main.cpp)
# target_link_libraries(main ${OpenCV_LIBS})

cmake_minimum_required(VERSION 3.5)
project(findHardDisk)
set(OpenCV_DIR "opencv-4.5.5/build")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
find_package(OpenCV REQUIRED)
add_library(shared  SHARED ${CMAKE_CURRENT_SOURCE_DIR}/src/suanzi/findHardDisk.cpp)
target_link_libraries(shared ${OpenCV_LIBS})
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/suanzi)
add_executable(try_find src/try_find.cpp)
target_link_libraries(try_find  shared ${OpenCV_LIBS})